# Sat_comm_emulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: control_flags.hpp  latency.hpp  logging.hpp  noise.hpp  str_const.hpp
proto/: satcom_messages.proto
src/: old_main.cpp
src/ground/: CMakeLists.txt  ground_station.cpp  ground_station.hpp  main.cpp
src/proxy/: CMakeLists.txt  proxy.cpp
src/sat/: CMakeLists.txt  main.cpp  satellite.cpp  satellite.hpp
tests/: CMakeLists.txt  test_ground_station.cpp
